# nanos-world-vault

./: .editorconfig  .gitignore  .gitmodules  .luarc.json  .version  LICENSE  README.md  code.ps1  emsdk.ps1  index.html  nanos-world-vault.slnx  neovim.cmd  neovim.ps1  packages.json  pull.ps1
.anticheat/: CMakeLists.txt  HOOK_DETECTOR_README.md  README.md  ac_anti_debug.c  ac_anti_vm.c  ac_common.h  ac_crc.c  ac_hooks.c  ac_process.c  build_anticheat.bat  build_hook_detector.bat  win32_api_hook_detector.c
.git-hooks/: pre-commit  pre-push
.github/workflows/: publish.yml
.lua/: CMakeLists.txt  DownloadLua.cs  download.cmd  make.cmd  premake5.lua
.lua/lua-5.4.8/: lua.exp  lua.lib  lua_static.lib
.lua/lua-5.4.8/src/: Lua.slnx  lua.vcxproj  lua_exe.vcxproj  lua_static.vcxproj  luac_exe.vcxproj
.packager/: GlobalUsings.cs  Models.cs  Packager.cs  packager.csproj  watch.cmd
.scripts/: bootstrap.cmd  bootstrap.sh  release.cmd  ver.ps1
.tools/: cleanup_unicode.ps1  luabcinsp.py  remove_submodule.ps1  remove_utf8_bom.ps1  submodule_manager.ps1  update_packages.ps1
2036/: anticheat-worker.js  anticheat.js  bootstrapper.html  hud.html  index.html  loading.html
2036-gamemode/: Package.toml
2036-gamemode/Client/: Index.lua
2036-gamemode/Client/UI/: 2036.html
2036-gamemode/Server/: Index.lua
2036-gamemode/Shared/: Index.lua
2036/video/: cheatoid-shenanigans.webm
anticheat/: Package.toml
anticheat/Client/: Index.lua
anticheat/Server/: Index.lua
anticheat/Shared/: Config.lua  Index.lua  metadata_gen.lua
cheatoid-library/: Package.toml  readme.md
cheatoid-library/Client/: Index.lua  RegexAPI.lua
cheatoid-library/Client/UI/: RegexAPI.html
cheatoid-library/Server/: Index.lua  PackageHelper.lua
cheatoid-library/Shared/: BroadcastLua.lua  ClientsideLua.lua  ConVar.lua  Config.lua  DebugHelper.lua  HttpWrapper.lua  Index.lua  RequireFolder.lua  TypeCheck.lua
coc/extensions/: package.json
coc/extensions/coc-lua-data/: db.json
imgui_web_demo/: CMakeLists.txt  build.cmd  emscripten_mainloop_stub.h  index.html  main.cpp  shell_minimal.html
nvim/: init.lua  lazy-lock.json
pages/: aichat.html  calc.html  canvas.html  input.html  input2.html  key-sink.html  keypad.html  serve.cmd
